<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="home"
            type="ble.ble.androque.HomeFragment" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="358dp"
                android:layout_height="92dp"
                android:text="@string/welcome_to_andro_que"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="19dp" />

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="267dp"
                android:layout_height="155dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.02"
                app:srcCompat="@drawable/android"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/welcome_home"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/homeImage"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="15dp" />

            <Button
                android:id="@+id/startGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/start_game"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
